# lz-lookup

./: CMakeLists.txt  README.md
cmake/: FindLevelZero.cmake
include/: utils.hpp
src/: hw_info.cpp  sub_devices.cpp
